# kuiskaus

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  launch_cli.sh  launch_kuiskaus.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.sh  setup.sh  test_basic.py  update_deps.sh
kuiskaus/: __init__.py  __main__.py  app.py  audio_recorder.py  hotkey_listener.py  hotkey_listener_cgevent.py  menubar.py  parakeet_transcriber.py  postprocessor.py  text_inserter.py  transcriber.py  voxtral_transcriber.py  whisper_transcriber.py
tests/: __init__.py  test_audio.py  test_integration.py  test_parakeet.py  test_postprocessor.py  test_transcriber.py  test_voxtral.py  test_whisper.py
